--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'Abysse du Vide - AFK Experience</title>
+    <title>L'Abysse du Vide - Expansion</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;700&family=JetBrains+Mono:wght@300;500&display=swap');
@@ -101,7 +101,7 @@
     <div id="app" class="max-w-4xl w-full flex flex-col items-center gap-10 relative z-10">
         
         <header class="text-center space-y-4">
-            <h1 class="text-6xl font-extralight tracking-[0.3em] uppercase text-white opacity-90" style="text-shadow: 0 0 30px rgba(99,102,241,0.3)">Abysse</h1>
+            <h1 class="text-6xl font-extralight tracking-[0.3em] uppercase text-white opacity-90" style="text-shadow: 0 0 30px rgba(99,102,241,0.3)">L'Abysse du Vide</h1>
             <div class="flex flex-col items-center gap-4">
                 <p class="text-slate-500 italic text-sm tracking-widest font-light">"Sombrez pour mieux régner."</p>
                 <div class="flex justify-center gap-4">
