Rename 'Collection' button to 'Reliques'

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <nav class="flex gap-4 md:gap-8 border-b border-white/5 w-full max-w-md justify-center">
             <button id="nav-achievements" onclick="switchTab('achievements')" class="tab-btn active px-2 py-3 text-[9px] md:text-[10px] uppercase tracking-[0.15em] transition-all text-slate-400">Succès</button>
             <button id="nav-talents" onclick="switchTab('talents')" class="tab-btn px-2 py-3 text-[9px] md:text-[10px] uppercase tracking-[0.15em] transition-all text-slate-400">Talents</button>
-            <button id="nav-eggs" onclick="switchTab('eggs')" class="tab-btn px-2 py-3 text-[9px] md:text-[10px] uppercase tracking-[0.15em] transition-all text-slate-400">Collection</button>
+            <button id="nav-eggs" onclick="switchTab('eggs')" class="tab-btn px-2 py-3 text-[9px] md:text-[10px] uppercase tracking-[0.15em] transition-all text-slate-400">Reliques</button>
         </nav>
 
         <div class="w-full max-w-3xl min-h-[300px]">
