--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         <header class="text-center space-y-4">
             <h1 class="text-3xl md:text-6xl font-extralight tracking-[0.2em] md:tracking-[0.3em] uppercase text-white opacity-90" style="text-shadow: 0 0 30px rgba(99,102,241,0.3)">L'Abysse du Vide</h1>
             <div class="flex flex-col items-center gap-4">
-                <p class="text-slate-500 italic text-[10px] md:text-sm tracking-widest font-light">"Sombrez pour mieux régner."</p>
+                <p class="text-slate-400 italic text-[10px] md:text-sm tracking-widest font-light">"Sombrez pour mieux régner."</p>
                 <div class="flex justify-center gap-2 md:gap-4">
-                    <button onclick="toggleSound()" id="sound-toggle" class="text-[8px] md:text-[9px] uppercase tracking-[0.2em] text-slate-400 border border-white/10 px-3 py-2 rounded-full hover:bg-white/5 transition-all">
+                    <button onclick="toggleSound()" id="sound-toggle" class="text-[8px] md:text-[9px] uppercase tracking-[0.2em] text-slate-300 border border-white/10 px-3 py-2 rounded-full hover:bg-white/5 transition-all">
                         Audio: Activé
                     </button>
                     <div id="prestige-zone" class="hidden">
@@ -125,7 +125,7 @@
             </div>
         </header>
 
-        <div id="prestige-stats" class="hidden flex flex-wrap justify-center gap-3 md:gap-6 py-3 px-6 md:px-8 glass rounded-2xl md:rounded-full text-[8px] md:text-[10px] uppercase tracking-[0.1em] md:tracking-[0.2em] text-indigo-400 font-medium">
+        <div id="prestige-stats" class="hidden flex flex-wrap justify-center gap-3 md:gap-6 py-3 px-6 md:px-8 glass rounded-2xl md:rounded-full text-[8px] md:text-[10px] uppercase tracking-[0.1em] md:tracking-[0.2em] text-indigo-300 font-medium">
             <span>Frag: <span id="fragments-count" class="text-white">0</span></span>
             <span>Mult: <span id="multiplier-display" class="text-white">1.0</span>x</span>
             <span>Res: <span id="res-count" class="text-white">0</span></span>
@@ -134,30 +134,29 @@
         <div class="w-full max-w-lg glass p-5 md:p-6 rounded-3xl space-y-4">
             <div class="flex justify-between items-end">
                 <div>
-                    <span class="text-[8px] md:text-[9px] uppercase tracking-[0.3em] text-slate-500">Strate</span>
+                    <span class="text-[8px] md:text-[9px] uppercase tracking-[0.3em] text-slate-400">Strate</span>
                     <div class="flex items-baseline gap-2">
                         <span id="level-display" class="text-3xl md:text-4xl font-light mono text-white">1</span>
                     </div>
                 </div>
                 <div class="text-right">
-                    <span class="mono text-[10px] md:text-xs text-slate-300"><span id="exp-current">0</span> / <span id="exp-next">100</span> XP</span>
+                    <span class="mono text-[10px] md:text-xs text-slate-200"><span id="exp-current">0</span> / <span id="exp-next">100</span> XP</span>
                 </div>
             </div>
             <div class="exp-container">
                 <div id="exp-bar" class="exp-fill"></div>
             </div>
-            <div class="flex justify-between text-[8px] md:text-[9px] uppercase tracking-widest text-slate-500">
-                <span>Talents: <span id="talent-points" class="text-indigo-400">0</span> PT</span>
+            <div class="flex justify-between text-[8px] md:text-[9px] uppercase tracking-widest text-slate-400">
+                <span>Talents: <span id="talent-points" class="text-indigo-300">0</span> PT</span>
                 <span>Anomalies: <span id="stat-anomalies" class="text-white">0</span></span>
             </div>
         </div>
 
-        <!-- Correction ici : Suppression du onclick manuel pour éviter le cheat -->
         <div class="relative group">
             <div id="timer-glow" class="absolute -inset-6 md:-inset-10 bg-indigo-600/5 rounded-full blur-[40px] md:blur-[60px] transition-all duration-1000"></div>
             <div class="relative w-48 h-48 md:w-64 md:h-64 rounded-full flex flex-col items-center justify-center float-anim border border-white/5 bg-white/5">
                 <span id="main-timer" class="text-3xl md:text-4xl font-extralight mono tracking-tighter text-white">00:00:00</span>
-                <span class="text-[8px] md:text-[9px] uppercase tracking-[0.4em] text-slate-500 mt-4">Existence</span>
+                <span class="text-[8px] md:text-[9px] uppercase tracking-[0.4em] text-slate-400 mt-4">Existence</span>
             </div>
         </div>
 
@@ -173,18 +172,18 @@
             <div id="tab-talents" class="hidden grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div class="glass p-5 rounded-2xl space-y-4">
                     <h3 class="text-white text-[10px] font-bold uppercase tracking-widest text-indigo-400">Éternité</h3>
-                    <p class="text-[10px] text-slate-500">Flux d'expérience passif.</p>
-                    <button onclick="buyTalent('xp')" id="t-xp" class="w-full py-3 glass-hover border border-white/5 rounded-lg text-[9px] uppercase text-slate-300 disabled:opacity-20 transition-all">Flux de Vide</button>
+                    <p class="text-[10px] text-slate-300">Flux d'expérience passif.</p>
+                    <button onclick="buyTalent('xp')" id="t-xp" class="w-full py-3 glass-hover border border-white/10 rounded-lg text-[9px] uppercase text-white disabled:opacity-20 transition-all">Flux de Vide</button>
                 </div>
                 <div class="glass p-5 rounded-2xl space-y-4">
                     <h3 class="text-white text-[10px] font-bold uppercase tracking-widest text-purple-400">Observation</h3>
-                    <p class="text-[10px] text-slate-500">Rareté des reliques.</p>
-                    <button onclick="buyTalent('eggs')" id="t-eggs" class="w-full py-3 glass-hover border border-white/5 rounded-lg text-[9px] uppercase text-slate-300 disabled:opacity-20 transition-all">Sixième Sens</button>
+                    <p class="text-[10px] text-slate-300">Rareté des reliques.</p>
+                    <button onclick="buyTalent('eggs')" id="t-eggs" class="w-full py-3 glass-hover border border-white/10 rounded-lg text-[9px] uppercase text-white disabled:opacity-20 transition-all">Sixième Sens</button>
                 </div>
                 <div class="glass p-5 rounded-2xl space-y-4">
                     <h3 class="text-white text-[10px] font-bold uppercase tracking-widest text-emerald-400">Fortune</h3>
-                    <p class="text-[10px] text-slate-500">Fréquence des anomalies.</p>
-                    <button onclick="buyTalent('fortune')" id="t-fortune" class="w-full py-3 glass-hover border border-white/5 rounded-lg text-[9px] uppercase text-slate-300 disabled:opacity-20 transition-all">Appel Instable</button>
+                    <p class="text-[10px] text-slate-300">Fréquence des anomalies.</p>
+                    <button onclick="buyTalent('fortune')" id="t-fortune" class="w-full py-3 glass-hover border border-white/10 rounded-lg text-[9px] uppercase text-white disabled:opacity-20 transition-all">Appel Instable</button>
                 </div>
             </div>
 
@@ -202,24 +201,24 @@
             { id: 4, name: "Écho du temps", chance: 0.2, color: "#93c5fd" },
             { id: 5, name: "Poussière d'étoile", chance: 0.15, color: "#fef08a" },
             { id: 6, name: "Vibration quantique", chance: 0.1, color: "#c084fc" },
-            { id: 7, name: "Erreur système", chance: 0.08, color: "#ef4444" },
-            { id: 8, name: "Regard du vide", chance: 0.05, color: "#4f46e5" },
+            { id: 7, name: "Erreur Système", chance: 0.08, color: "#ef4444" },
+            { id: 8, name: "Regard du Vide", chance: 0.05, color: "#4f46e5" },
             { id: 9, name: "Singularité", chance: 0.04, color: "#312e81" },
             { id: 10, name: "Déjà-vu", chance: 0.03, color: "#34d399" },
             { id: 11, name: "L'œil d'Odin", chance: 0.02, color: "#3b82f6" },
-            { id: 12, name: "Code source visible", chance: 0.015, color: "#22c55e" },
-            { id: 13, name: "Le chat de Schrödinger", chance: 0.01, color: "#fb923c" },
-            { id: 14, name: "Onde gravitationnelle", chance: 0.008, color: "#67e8f9" },
-            { id: 15, name: "Paradoxe temporel", chance: 0.007, color: "#f43f5e" },
-            { id: 16, name: "Fragment d'éternité", chance: 0.006, color: "#fcd34d" },
+            { id: 12, name: "Code Source Visible", chance: 0.015, color: "#22c55e" },
+            { id: 13, name: "Le Chat de Schrödinger", chance: 0.01, color: "#fb923c" },
+            { id: 14, name: "Onde Gravitationnelle", chance: 0.008, color: "#67e8f9" },
+            { id: 15, name: "Paradoxe Temporel", chance: 0.007, color: "#f43f5e" },
+            { id: 16, name: "Fragment d'Éternité", chance: 0.006, color: "#fcd34d" },
             { id: 17, name: "Battement du CPU", chance: 0.005, color: "#dc2626" },
             { id: 18, name: "Une pensée pour toi", chance: 0.004, color: "#f472b6" },
             { id: 19, name: "L'appel de Cthulhu", chance: 0.003, color: "#0d9488" },
             { id: 20, name: "Zéro Absolu", chance: 0.002, color: "#bae6fd" },
             { id: 21, name: "La Réponse (42)", chance: 0.001, color: "#818cf8" },
             { id: 22, name: "Apparition du Créateur", chance: 0.0008, color: "#eab308" },
-            { id: 23, name: "Supernova silencieuse", chance: 0.0005, color: "#ea580c" },
-            { id: 24, name: "Collision dimensionnelle", chance: 0.0002, color: "#d946ef" },
+            { id: 23, name: "Supernova Silencieuse", chance: 0.0005, color: "#ea580c" },
+            { id: 24, name: "Collision Dimensionnelle", chance: 0.0002, color: "#d946ef" },
             { id: 25, name: "L'Alpha et l'Oméga", chance: 0.0001, color: "#f8fafc" }
         ];
 
@@ -406,7 +405,7 @@
             const toast = document.createElement('div');
             toast.className = 'glass p-4 rounded-2xl border-l-4 transition-all duration-500 transform translate-x-full min-w-[200px] shadow-2xl';
             toast.style.borderLeftColor = color;
-            toast.innerHTML = `<div class="flex flex-col"><span class="text-[8px] uppercase tracking-widest text-slate-500">${title}</span><span class="text-[11px] font-bold text-white">${name}</span><span class="text-[9px] text-slate-500 mt-0.5 italic">${extra}</span></div>`;
+            toast.innerHTML = `<div class="flex flex-col"><span class="text-[8px] uppercase tracking-widest text-slate-400">${title}</span><span class="text-[11px] font-bold text-white">${name}</span><span class="text-[9px] text-slate-400 mt-0.5 italic">${extra}</span></div>`;
             container.appendChild(toast);
             
             setTimeout(() => toast.classList.remove('translate-x-full'), 100);
@@ -464,10 +463,10 @@
         function renderAchievements() {
             document.getElementById('tab-achievements').innerHTML = ACHIEVEMENTS.map(ach => {
                 const done = gameState.achievements.includes(ach.id);
-                return `<div class="glass p-4 rounded-xl border-white/5 ${done ? 'opacity-100' : 'opacity-30'}">
-                    <h4 class="text-[10px] font-bold uppercase tracking-widest text-white">${ach.name}</h4>
-                    <p class="text-[9px] text-slate-500 mt-1">${ach.desc}</p>
-                    ${done ? '<span class="text-[8px] text-emerald-500 mt-2 block">DÉBLOQUÉ</span>' : ''}
+                return `<div class="glass p-4 rounded-xl border-white/5 ${done ? 'opacity-100' : ''}">
+                    <h4 class="text-[10px] font-bold uppercase tracking-widest ${done ? 'text-white' : 'text-slate-400'}">${ach.name}</h4>
+                    <p class="text-[9px] ${done ? 'text-slate-400' : 'text-slate-500/60'} mt-1">${ach.desc}</p>
+                    ${done ? '<span class="text-[8px] text-emerald-400 mt-2 block font-bold">DÉBLOQUÉ</span>' : '<span class="text-[8px] text-slate-500/40 mt-2 block">VERROUILLÉ</span>'}
                 </div>`;
             }).join('');
         }
@@ -475,9 +474,9 @@
         function renderEggs() {
             document.getElementById('tab-eggs').innerHTML = EASTER_EGGS.map(egg => {
                 const found = gameState.foundEggs.includes(egg.id);
-                return `<div class="glass p-3 rounded-xl text-center flex flex-col items-center gap-2 ${found ? '' : 'opacity-20'}">
-                    <div class="w-4 h-4 rounded-full" style="background:${found ? egg.color : '#333'}; box-shadow: 0 0 10px ${found ? egg.color : 'transparent'}"></div>
-                    <span class="text-[8px] uppercase tracking-tighter text-slate-300 font-medium leading-tight">${found ? egg.name : 'Scellé'}</span>
+                return `<div class="glass p-3 rounded-xl text-center flex flex-col items-center gap-2">
+                    <div class="w-4 h-4 rounded-full" style="background:${found ? egg.color : '#222'}; box-shadow: 0 0 10px ${found ? egg.color : 'transparent'}; opacity: ${found ? 1 : 0.3}"></div>
+                    <span class="text-[8px] uppercase tracking-tighter ${found ? 'text-slate-200 font-bold' : 'text-slate-500/50'} leading-tight">${found ? egg.name : 'Scellé'}</span>
                 </div>`;
             }).join('');
         }
@@ -487,7 +486,7 @@
             for (let id in gameState.talents) {
                 const btn = document.getElementById(`t-${id}`);
                 const lv = gameState.talents[id];
-                btn.innerHTML = `<span class="block mb-1">${names[id]} (v${lv})</span><span class="text-indigo-400">+${(lv+1)*20}%</span>`;
+                btn.innerHTML = `<span class="block mb-1">${names[id]} (v${lv})</span><span class="text-indigo-300">+${(lv+1)*20}%</span>`;
                 btn.disabled = gameState.talentPoints < 1;
             }
         }
